<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>me495_pointcloud</name>
  <version>0.0.1</version>
  <description>Demonstration of Point Clouds with PCL in ROS 2</description>
  <maintainer email="elwin@northwestern.edu">Matthew Elwin</maintainer>
  <license>GPLv3</license>

  <depend>rclcpp</depend>
  <depend>pcl</depend>
  <depend>pcl_conversions</depend>
  <depend>sensor_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
